# tauri-plugin-app-events

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AppEventsPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json  mobile.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: global.d.ts  index.ts
ios/tauri-plugin-app-events/: AppEventsPlugin.swift
ios/tauri-plugin-app-events.xcodeproj/: project.pbxproj
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs  mobile.rs  models.rs
