[package]
name = "tauri-plugin-app-events"
version = "0.1.0"
authors = [ "wtto00 <wtto00@outlook.com>" ]
description = "A plugin for tauri@v2 to listen some events on iOS and Android."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-app-events"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
